@@ -20,12 +20,25 @@ if [ -z "$1" ]; then
 				exit 1
 fi
 
+# OS specific support.  $var _must_ be set to either true or false.
+cygwin=false;
+case "`uname`" in
+  CYGWIN*) cygwin=true ;;
+esac
 
 SCRIPT_DIR=`dirname $0`
 CWD="$PWD"
 
 cd "$SCRIPT_DIR/../lib"
 LIB_DIR=`pwd -P`
+
+# If cygwin, convert to Unix form before manipulating
+if $cygwin ; then
+  [ -n "$JAVA_HOME" ] &&
+    JAVA_HOME=`cygpath --unix "$JAVA_HOME"`
+ [ -n "$CLASSPATH" ] &&
+    CLASSPATH=`cygpath --path --unix "$CLASSPATH"`
+fi
 
 classpath=$CLASSPATH
 
@@ -55,11 +68,18 @@ case "$HEAPSIZE" in
 esac
 
 case "$LANGUAGE" in
-cpp|c) ;;
-*) echo "Language '$LANGUAGE' unknown (try: cpp, c)"
+c|cpp|fortran|java|jsp|php|ruby) ;;
+*) echo "Language '$LANGUAGE' unknown (try: c, cpp, fortran, java, jsp, php, ruby)"
    exit 1
 esac
 
 # echo "CLASSPATH: $classpath"
+
+# For Cygwin, switch paths to Windows format before running java
+if $cygwin; then
+  JAVA_HOME=`cygpath --windows "$JAVA_HOME"`
+  classpath=`cygpath --path --windows "$classpath"`
+  DIRECTORY=`cygpath --windows "$DIRECTORY"`
+fi
 
 java $HEAPSIZE -cp $classpath net.sourceforge.pmd.cpd.CPD --minimum-tokens $MINIMUM_TOKENS --files $DIRECTORY --language $LANGUAGE
