@@ -7,11 +7,25 @@ if [ -z "$3" ]; then
     exit 1
 fi
 
+# OS specific support.  $var _must_ be set to either true or false.
+cygwin=false;
+case "`uname`" in
+  CYGWIN*) cygwin=true ;;
+esac
+
 SCRIPT_DIR=`dirname $0`
 CWD="$PWD"
 
 cd "$SCRIPT_DIR/../lib"
 LIB_DIR=`pwd -P`
+
+# If cygwin, convert to Unix form before manipulating
+if $cygwin ; then
+  [ -n "$JAVA_HOME" ] &&
+    JAVA_HOME=`cygpath --unix "$JAVA_HOME"`
+ [ -n "$CLASSPATH" ] &&
+    CLASSPATH=`cygpath --path --unix "$CLASSPATH"`
+fi
 
 classpath=$CLASSPATH
 
@@ -37,5 +51,12 @@ shift
 RULESETFILES="$@"
 
 # echo "CLASSPATH: $classpath"
+
+# For Cygwin, switch paths to Windows format before running java
+if $cygwin; then
+  JAVA_HOME=`cygpath --windows "$JAVA_HOME"`
+  classpath=`cygpath --path --windows "$classpath"`
+  FILE=`cygpath --windows "$FILE"`
+fi
 
 java -Xmx512m -cp $classpath net.sourceforge.pmd.PMD $FILE $FORMAT $RULESETFILES
