@@ -146,6 +146,10 @@ TokenManager errors now include a file name whenever possible for every AST in P
 Fixed bug 1932242 - EmptyMethodInAbstractClassShouldBeAbstract false +
 Fixed bug 1928009 - Error using migration ruleset in PMD 4.2
 ruleset.dtd and ruleset_xml_schema.xsd added to jar file in rulesets directory
+bin and java14/bin scripts:
+	retroweaver version was not correct in java14/bin scripts
+	support for extra languages in cpd.sh
+	standard unix scripts can be used with cygwin
 
 New rules:
 
